# alcremio

./: .gitignore  README.md  alcremio-workspace.code-workspace  pyproject.toml
src/: alcremio.py  pyproject.toml  resources.qrc  resources_rc.py
src/ui/: fonts_rc.py  main.py  main.ui  main_ui.py
